<resources>
    <string name="app_name">PersonalApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choose_outlay_type">Choose type:</string>
    <string name="outlay_volume">Outlay volume:</string>

    <string name="add_outlay">ADD</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="def_outlay_value">0</string>
    <string name="more">More..</string>

</resources>
