<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/txt_choose_outlay_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_outlay_type_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/choose_outlay_type" />

    <TextView
        android:id="@+id/txt_outlay_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_choose_outlay_type"
        android:text="Some outlay type"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_first_outlay_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_choose_outlay_type"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_sec_outlay_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_first_outlay_type"
        android:layout_toEndOf="@+id/btn_first_outlay_type"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_more_outlay_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_sec_outlay_type"
        android:layout_toEndOf="@+id/btn_sec_outlay_type"
        style="?android:attr/buttonStyleSmall" />


    <TextView
        android:id="@+id/txt_outlay_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btn_more_outlay_types"
        android:gravity="end"
        android:text="@string/outlay_volume" />

    <TextView
        android:id="@+id/txt_outlay_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txt_outlay_volume"
        android:gravity="end"
        android:text="123"
        android:textSize="23sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_one_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:text="@string/one"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_two_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:layout_toEndOf="@+id/btn_one_plus"
        android:text="@string/two"
        style="?android:attr/buttonStyleSmall"  />

    <Button
        android:id="@+id/btn_three_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:layout_toEndOf="@+id/btn_two_plus"
        android:text="@string/three"
        style="?android:attr/buttonStyleSmall"  />

    <Button
        android:id="@+id/btn_four_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:layout_toEndOf="@+id/btn_three_plus"
        android:text="@string/four"
        style="?android:attr/buttonStyleSmall"  />

    <Button
        android:id="@+id/btn_five_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:layout_toEndOf="@+id/btn_four_plus"
        android:text="@string/five"
        style="?android:attr/buttonStyleSmall"  />

    <Button
        android:id="@+id/btn_six_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:layout_toEndOf="@+id/btn_five_plus"
        android:text="@string/six"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_seven_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_outlay_value"
        android:layout_toEndOf="@+id/btn_six_plus"
        android:text="@string/seven"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_eight_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_four_plus"
        android:text="@string/eight"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_nine_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_four_plus"
        android:layout_toEndOf="@+id/btn_eight_plus"
        android:text="@string/nine"
        style="?android:attr/buttonStyleSmall" />

    <Button
        android:id="@+id/btn_zero_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btn_nine_plus"
        android:layout_below="@+id/btn_seven_plus"
        android:text="@string/zero" />

    <Button
        android:id="@+id/btn_add_outlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btn_zero_plus"
        android:layout_below="@+id/btn_seven_plus"
        android:text="@string/add_outlay" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btn_add_outlay"
        android:layout_below="@+id/btn_seven_plus"
        android:layout_alignRight="@+id/btn_seven_plus" />

</RelativeLayout>